# PyProgressBar

./: .gitignore  LICENCE  README.md  pyproject.toml
PyProgressLib_ThatOneCoder/: pyprogresslib.py  setup.py
examples/: example_progress_bar.py  example_progress_icon.py
src/PyProgressBar_ThatOneCoder/: waitingSymbols.json
