[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyProgressLib_ThatOneCoder"
version = "0.0.1"
authors = [
  { name="ThatOneCoder", email="trex31415@gmai.com" },
]
description = "A small progress bar and progress spinner package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"