[build-system]
requires = ["hatchling","termcolor"]
build-backend = "hatchling.build"

[project]
name = "PyProgressLib_ThatOneCoder"
version = "0.0.3"
authors = [
  {name="ThatOneCoder", email="trex31415@gmail.com"},
]
description = "A small progress bar and progress spinner package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/UnethicalBear/PyProgressBar"
"Bug Tracker" = "https://github.com/UnethicalBear/PyProgressBar/issues"